creacion de consultas complejas